# EmbedStory-rust

./: Cargo.toml  setting.json
deploy/: battle_effects_config.json  biome_config.json  character_config.json  game_objects_config.json  game_scene_config.json  monster_type_config.json  mosnter_strength_config.json  npc_config.json  projectile_config.json  race_config.json  skill_config.json  tilemap_tile_cover_config.json  tilemap_tile_ground_config.json
glossary/: english.json  russian.json
src/: config.rs  deploy.rs  entity_manager.rs  main.rs  main_old.rs  scene.rs  scene_manager.rs  texture_manager.rs  tile.rs  tilemap.rs
src/components/: mod.rs  thing_component.rs  tile_component.rs
src/components/charactor_component/: mod.rs
src/deploy/: biome_config.json  game_objects_config.json  ground_scene_config.json  ground_tilemap_tile_cover_config.json  ground_tilemap_tile_ground_config.json  scene_config.json  tile_config.json  tilemap_tile_cover_config.json  tilemap_tile_ground_config.json
src/entity_manager/: character.rs  effect.rs  object.rs  stuff.rs
src/glossary/: english.json  russian.json
src/materials/: cover_tile.rs  cover_tile_material.rs  create_char_scene_material.rs  font.rs  game_ground_scene_material.rs  game_scene_material.rs  ground_tile.rs  ground_tile_material.rs  loading_new_game_scene_material.rs  main_menu_scene_material.rs  material_manager.rs  mod.rs  options_scene_material.rs
src/plugins/: camera.rs
src/resources/: charactor_manager.rs  deploy.rs  dictionary.rs  glossary.rs  language.rs  mod.rs  object_manager.rs  profile.rs  scene_manager.rs  setting.rs  stuff_manager.rs  thing_manager.rs
src/scene/: tilemap.rs
src/scene_manager/: game_scene.rs  loading_scene.rs  mod.rs
src/scenes/: create_char_scene.rs  foreground_scene.rs  loading_new_game_scene.rs  loading_scene.rs  main_menu_scene.rs  mod.rs  options_scene.rs
(+141 files in other folders)
