[package]
name = "embed_story"
authors = ["Alex OneWay Power"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
bevy = { version = "0.7.0", features = ["dynamic"] }
#bevy = "0.7"

# Enable only a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
lto = "thin"