[package]
name = "embed_story"
authors = ["Alex OneWay Power"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
#bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = ["dynamic", "render" ] }
bevy = { version = "0.7.0", features = ["dynamic"] }
#bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "main" }
serde = { version = "1.0", features = ["derive"] }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3

[profile.release]
lto = "thin"