[package]
name = "embed_story"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.10.1", default-features = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
chrono = "0.4"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"